--- a/style.css
+++ b/style.css
@@ -78,11 +78,86 @@ option {
 	right: 0;
 	height: 100vh;
 	width: 100vw;
-	background-color: #f0f;
 }
 
 .preview{
 	border: none;
 	width: 100%;
-	background-color: #f00;
+}
+
+@font-face {
+    font-family: aleo-italic;
+    src: url("Aleo-Italic.otf");
+}
+
+@font-face {
+	font-family: museosans-bold;
+	src: url("MuseoSans_500-webfont.ttf");
+}
+
+@font-face {
+	font-family: segoe-script;
+	src: url("Segoe Script Regular.ttf");
+}
+.iframe-body {
+	background: #f66522;
+	background: -moz-linear-gradient(top, #f66522 0%, #fbd101 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, #f66522), color-stop(100%, #fbd101));
+	background: -webkit-linear-gradient(top, #f66522 0%, #fbd101 100%);
+	background: -o-linear-gradient(top, #f66522 0%, #fbd101 100%);
+	background: -ms-linear-gradient(top, #f66522 0%, #fbd101 100%);
+	background: linear-gradient(to bottom, #f66522 0%, #fbd101 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f66522', endColorstr='#fbd101', GradientType=0 );
+	
+	color: #003da7;
+	width: 900px;
+	height: 100vh;
+	margin: 0 auto;
+	text-align: center;	
+}
+
+
+.display {
+	position: relative;
+  	top: 50%;
+  	-webkit-transform: translateY(-50%);
+  	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
+}
+
+.title1 {
+	color: white;
+	font-family: aleo-italic;
+	font-size: 8em;
+	margin-bottom: 35px;
+}
+
+.title2 {
+	font-family: segoe-script;
+	font-size: 7em;
+	margin-top: 35px;
+}
+
+.subtitle1 {
+	color: white;
+	font-family: aleo-italic;
+	font-size: 2.5em;
+}
+
+@media (max-height: 800px) {
+
+	.title1 {
+		font-size: 4.5em;
+		margin-bottom: 50px;
+	}
+	
+	.title2 {
+		font-size: 4.5em;
+		margin-top: 50px;
+	}
+	
+	.subtitle1 {
+		font-size: 2em;
+	}
+	
 }
